@@ -38,6 +38,7 @@
 
 * Bugs fixed:
 
+  [#12324] overview: boot_page_write_safe, etc.
   [#12333] Standard requires libstdc to define vprintf and vscanf
   [#12495] about Busy-wait delay loops(document)
   [#12496] about set_sleep_mode() and tiny26/tiny2313
